增加图片下载代理地址

--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,9 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+    <build>
+        <finalName>qbot</finalName>
+    </build>
 
 
 
