--- a/pom.xml
+++ b/pom.xml
@@ -53,8 +53,8 @@
         <!--Spring-CQ-->
         <dependency>
             <groupId>net.lz1998</groupId>
-            <artifactId>spring-cq</artifactId>
-            <version>4.15.0.1</version>
+            <artifactId>pbbot-spring-boot-starter</artifactId>
+            <version>0.0.39</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
