--- a/rsshubqq/src/main/resources/application-rsshubqq.yml
+++ b/rsshubqq/src/main/resources/application-rsshubqq.yml
@@ -17,7 +17,7 @@ rsshub:
   urlTempAccess: false #是否开启临时文件访问
   localUrl: localhost #外部访问域名
   accessPort: 8081    #外部访问端口
-  proxyUrl: "192.168.199.8" #代理地址
+  proxyUrl: 192.168.199.8 #代理地址
   proxyPort: 10809 #Http代理端口
   rssList:
     - name: "test"
