提交未完成的SteamBranch爬取部分

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,11 @@ target/
 /utils/target/
 /rsshubqq/target/
 /main/target/
+/steamBranch/target/
+/utils/src/test/
+/rsshubqq/src/test/
+/main/src/test/
+/steamBranch/src/test/
 /.idea/
 /db/
 /tmp/
