--- a/main/src/main/resources/application.yml
+++ b/main/src/main/resources/application.yml
@@ -2,6 +2,7 @@ spring:
   profiles:
     include:
       - rsshubqq
+      - steamBranch
   cq:
     plugin-list: #插件列表
       - com.bot.main.plugin.FilterPlugin
