--- a/main/src/main/resources/application.yml
+++ b/main/src/main/resources/application.yml
@@ -7,6 +7,7 @@ spring:
     plugin-list: #插件列表
       - com.bot.main.plugin.FilterPlugin
       - com.bot.rsshubqq.plugin.RssHubPlugin
+      - com.bot.steamBranch.plugin.SteamBranchPlugin
       - com.bot.main.plugin.BaseRespondPlugin
 bot:
   replyGroup: false   #响应群消息
