--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>main</module>
         <module>utils</module>
         <module>steamBranch</module>
+        <module>logService</module>
     </modules>
 
     <properties>
