--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -11,6 +11,15 @@
 
     <artifactId>utils</artifactId>
 
+    <dependencies>
+        <!--Spring-CQ-->
+        <dependency>
+            <groupId>com.bot</groupId>
+            <artifactId>spring-cq</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
