--- a/logService/pom.xml
+++ b/logService/pom.xml
@@ -21,6 +21,12 @@
             <artifactId>spring-cq</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.10.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
